# Home_health_care

./: .gitignore
Design/wearable_device/: SamacSys_Parts.dcm  SamacSys_Parts.kicad_sym  SamacSys_Parts.lib  fp-info-cache  fp-lib-table  sym-lib-table  wearable_device-B_Cu.gbr  wearable_device-B_Mask.gbr  wearable_device-B_Paste.gbr  wearable_device-B_Silkscreen.gbr  wearable_device-Edge_Cuts.gbr  wearable_device-F_Cu.gbr  wearable_device-F_Mask.gbr  wearable_device-F_Paste.gbr  wearable_device-F_Silkscreen.gbr  wearable_device-In1_Cu.gbr  wearable_device-In2_Cu.gbr  wearable_device-job.gbrjob  wearable_device.kicad_pcb  wearable_device.kicad_prl  wearable_device.kicad_pro  wearable_device.kicad_sch
Design/wearable_device/Gerber/: wearable_device-B_Cu.gbr  wearable_device-B_Mask.gbr  wearable_device-B_Paste.gbr  wearable_device-B_Silkscreen.gbr  wearable_device-Edge_Cuts.gbr  wearable_device-F_Cu.gbr  wearable_device-F_Mask.gbr  wearable_device-F_Paste.gbr  wearable_device-F_Silkscreen.gbr  wearable_device-In1_Cu.gbr  wearable_device-In2_Cu.gbr  wearable_device-NPTH-drl.gbr  (+2 more)
Document/: 16. XÁC NHẬN CHỈNH SỬA ĐỒ ÁN TỐT NGHIỆP.docx  5_Nguyễn-Văn-Phương-CBPB.docx  9. NHẬN XÉT CHO ĐIỂM CỦA PHẢN BIỆN.docx  Báo cáo tiến độ ĐA_Lần 4.docx  Presentation_NguyenVanPhuong_v2_vi.pptx  ~$ PHƯƠNG.docx
Hardware/Test/: check_l80r.py  serial_reader.py
Hardware/chua_chay/: .cproject  .mxproject  .project  CMakeLists.txt  chua_chay.ioc
Hardware/esp-idf-st7789/: sdkconfig  sdkconfig.old
Hardware/hello_world/: sdkconfig  sdkconfig.old
Hardware/main_hardware/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
Hardware/main_hardware/main/: CMakeLists.txt  LIS2DH12TR.c  LIS2DH12TR.h  ble_fc.c  ble_fc.h  gfxfont.c  gfxfont.h  glcdfont.c  glcdfont.h  main.c  main.h  main_hardware.c  mqtt_cl.c  mqtt_cl.h  sensor_data.c  sensor_data.h  ssd1306_oled.c  ssd1306_oled.h  st7789_lcd.c  st7789_lcd.h  wifi_pr.h
Hardware/stm32_board/: .cproject  .mxproject  .project  CMakeLists.txt  compile_commands.json  stm32_board Debug.launch  stm32_board.ioc
Hardware/test_esp/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
Hardware/test_esp/main/: CMakeLists.txt  LIS2DH12TR.c  LIS2DH12TR.h  ble_fc.c  ble_fc.h  l80r_process.c  l80r_process.h  main.c  main.h  mqtt_cl.c  mqtt_cl.h  roboto_12pt.c  sensor_data.c  sensor_data.h  ssd1306_oled.c  ssd1306_oled.h  test_esp.c  wifi_pr.c  wifi_pr.h
Software/: firebase.json  mqtt_data.json
Software/server_project/: .gitignore  firebase_credentials.json  gemini_service.py  main.py  qa_api.py  report_generator.py  requirements.txt
Software/wearable_app/: .gitignore  firebase.json  pubspec.yaml
Software/wearable_project/: integration_test.py
Software/wearable_web/: firebase.js  package-lock.json  package.json
(+344 files in other folders)
